syntax = "proto3";

option csharp_namespace = "InternalsServer";

package greet;

service Greeter {
//  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc Ping (PingRequest) returns (stream PingReply);
}

//message HelloRequest {
//  string name = 1;
//}
//
//message HelloReply {
//  string message = 1;
//}

message PingRequest {
  string clientId = 1;
}

message PingReply {
  string message = 1;
}
